# Sprint_6

./: conftest.py  constest.py  pyproject.toml
allure-results/: 006a80fd-985d-42fa-984a-dc0efb24a6de-container.json  00829730-cccd-4cad-b74f-d6ed1e02123a-container.json  054b8f89-6bdf-4ae8-a41d-15289379f53e-result.json  06a46488-286a-46e3-b3e1-3bae3e5920c0-result.json  06dff085-0c11-4097-b149-70ca0a00afd9-result.json  072b630a-7de3-4c5a-950d-c526e96bf8c4-result.json  0859dace-19bc-4c37-afec-bedb116e5187-result.json  09463aee-6953-475e-8b94-6f0bdc6b4599-container.json  0b653d42-be0c-42b4-b411-bc2beecaeebd-container.json  0b6fb332-6281-4aa4-831a-54d4d09cf5cd-container.json  0bf84d2b-d34f-46d0-b92b-7b5706fb77d6-container.json  0f013765-7f7e-4579-8013-9c26105b9889-container.json  11e08614-01d2-4591-8480-0ff5aacae19d-result.json  134cc517-295c-4ec4-bdf8-ead540d68103-container.json  1de0372c-8d5a-49fa-8c1e-7273de246a9c-result.json  2024d875-771e-419e-be9a-81b6ffc820dc-container.json  2065366c-6a20-4332-a620-bc2e56ff6472-container.json  22b1302f-b1b6-4e9d-9ff3-bb441fb820ff-container.json  23373ce3-6c3a-410b-a6d3-6b26aa0ae1f1-container.json  24f87ff0-7488-46c6-bfa7-94f35751617e-container.json  279fc5d2-bcab-4910-a063-32503c56f588-result.json  281b8c16-741d-4c91-98e3-16b0490002c5-container.json  29a6636e-2233-4931-8b39-8cd62bb95c76-container.json  29a995fa-2cfd-48bb-8103-c82648b3c793-container.json  2e191072-828e-490f-a653-b7e4899a1fd6-container.json  2f5d78c7-4c1c-43ab-a02f-e514c218c21a-container.json  2fce00f4-1739-46cc-85d2-09db2d67de98-container.json  (+89 more)
data/: accordion_text.json
(+23 files in other folders)
